# pfs

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  format  package.xml  tag
.github/workflows/: cmake.yml
cmake/: pfs-config.cmake.in
docker/: Dockerfile-alpine3  Dockerfile-coverage  Dockerfile-debian12  Dockerfile-debian12-32bit  Dockerfile-redhat8  Dockerfile-ubuntu22  docker-pfs
include/pfs/: block.hpp  block_queue.hpp  defer.hpp  fd.hpp  filter.hpp  mem.hpp  net.hpp  parser_error.hpp  parsers.hpp  procfs.hpp  sysfs.hpp  task.hpp  types.hpp  utils.hpp  version.hpp
include/pfs/parsers/: block_stat.hpp  buddyinfo.hpp  cgroup.hpp  cgroup_controller.hpp  common.hpp  file_parser.hpp  filesystems.hpp  generic.hpp  kv_file_parser.hpp  lines.hpp  loadavg.hpp  maps.hpp  mem_map.hpp  meminfo.hpp  modules.hpp  mountinfo.hpp  net_arp.hpp  net_device.hpp  net_route.hpp  net_socket.hpp  netlink_socket.hpp  number.hpp  proc_stat.hpp  smaps.hpp  syscall.hpp  task_io.hpp  task_status.hpp  unix_socket.hpp  uptime.hpp
sample/: enum.hpp  enum_block.cpp  enum_fd.cpp  enum_net.cpp  enum_sockets.cpp  enum_system.cpp  enum_task.cpp  format.hpp  log.hpp  menu.hpp  sample.cpp  tool.hpp  tool_lsmod.cpp  tool_netstat.cpp
script/: format
src/: block.cpp  block_queue.cpp  fd.cpp  mem.cpp  mem_map.cpp  net.cpp  procfs.cpp  smaps.cpp  sysfs.cpp  task.cpp  types.cpp  utils.cpp
src/parsers/: block_stat.cpp  buddyinfo.cpp  cgroup.cpp  cgroup_controller.cpp  common.cpp  filesystems.cpp  io_stat.cpp  loadavg.cpp  maps.cpp  meminfo.cpp  modules.cpp  mountinfo.cpp  net_arp.cpp  net_device.cpp  net_route.cpp  net_socket.cpp  netlink_socket.cpp  proc_stat.cpp  route.cpp  socket.cpp  status.cpp  syscall.cpp  task_io.cpp  task_status.cpp  unix_domain_socket.cpp  unix_socket.cpp  uptime.cpp
test/: block_stat.cpp  buddyinfo.cpp  cgroup.cpp  cgroup_controller.cpp  common.cpp  filesystems.cpp  io.cpp  loadavg.cpp  maps.cpp  mem.cpp  meminfo.cpp  modules.cpp  mountinfo.cpp  net_device.cpp  net_route.cpp  net_socket.cpp  netlink_socket.cpp  parsers.cpp  proc_stat.cpp  route.cpp  socket.cpp  status.cpp  task_stat.cpp  task_status.cpp  test_block_stat.cpp  test_buddyinfo.cpp  test_cgroup.cpp  test_common.cpp  test_loadavg.cpp  test_main.cpp  test_maps.cpp  test_mem.cpp  test_modules.cpp  test_mountinfo.cpp  test_net_arp.cpp  test_net_device.cpp  test_net_route.cpp  test_net_socket.cpp  test_parsers.cpp  test_proc_stat.cpp  (+11 more)
test/cmake/: README.md  find_package.cpp  run_test
test/cmake/find_package/: CMakeLists.txt  find_package.cpp
test/cmake/find_package_installed/: CMakeLists.txt
test/cmake/find_package_source/: CMakeLists.txt
